--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
       <br>
       <button class="button" onclick="help()">HELP</button>
     </div>
-    <p style="color:#38b6ff;font-family:Arial,Helvetica,sans-serif;font-weight:10;text-align:center;margin-top:0">&copy; 2021-2023 <a href="https://github.com/Parking-Master" style="font-family:Arial,Helvetica,sans-serif!important">Parking Master</a></p>
+    <p style="color:#38b6ff;font-family:Arial,Helvetica,sans-serif;font-weight:10;text-align:center;margin-top:0">&copy; 2022-2023 <a href="https://replit.com/@Grey41" style="font-family:Arial,Helvetica,sans-serif!important">Grey41</a></p>
     <div class="cover">
       <span id="close" style="color:#ff4444;font-size:25px" onclick="play()">&times;</span>
       <h1 style="font-family:'BigShouldersDisplayRegular';font-size:50px;color:#38b6ff">&bullet; PLAY &bullet;</h1>
